syntax = "proto3";
package post;

message Post {
  string id = 1;
  string title = 2;
  string body = 3;
}

message GetPostRequest { string id = 1; }
message CreatePostRequest { string title = 1; string body = 2; }
message UpdatePostRequest { string id = 1; string title = 2; string body = 3; }
message DeletePostRequest { string id = 1; }
message ListPostsRequest { int32 page_size = 1; string page_token = 2; }
message ListPostsResponse { repeated Post posts = 1; }

service PostService {
  rpc GetPost(GetPostRequest) returns (Post);
  rpc CreatePost(CreatePostRequest) returns (Post);
  rpc UpdatePost(UpdatePostRequest) returns (Post);
  rpc DeletePost(DeletePostRequest) returns (Post);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}
